Fix overflow issue for slide controls (prevent shrinking size)

--- a/src/style-guide.less
+++ b/src/style-guide.less
@@ -2629,6 +2629,7 @@ p{
       z-index:10;
       display:flex;
       flex-direction:row;
+      flex-shrink:0;
 
       .md-button{
         margin: 0;
